unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-function-name2.js
a = async function () { async function await() {} }
